prover-ray/zkcdriver/testdata/synced/invalid/call_03.zkc
//error:3:7-11:insufficient arguments (expected 2)
fn f(x:u8) -> (r:u8) {
  r = g(x)
  return
}

fn g(x:u8, y:u8) -> (z:u8) {
   z = x
   return
}
